--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Gym_App"
         tools:targetApi="31">
         <activity
-            android:name=".gyms.MainActivity"
+            android:name=".gyms.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Gym_App">
